Changelog for Beam-Wire

{{ $NEXT }}

1.019 2016-03-04T04:20:22
 - Stop shipping README.mkdn to CPAN
 - Replace ReadmeMarkdownFromPod with ReadmeAnyFromPod
 - Inject travis markdown stuff in source tree, not build tree.
 - Replace ReadmeFromPod with Readme::Brief
 - Stop copying "README" from "CPAN" to "Source"
 - Filter out the Readme plugin from @Basic
 - Correct apparently backwards POD Link
 - Add -SingleEncoding to weaver config

1.018 2016-02-29T01:30:05Z
 - add better error when object config incomplete
 - fix unprefixed metadata allowed outside the root
 - add debugging info with BEAM_WIRE_DEBUG envvar

1.017 2016-02-28T05:43:50Z
 - add bare services
 - rewrite and expand the documentation

1.016 2016-02-24T23:37:58Z
 - Compose Roles _before_ instantiation so attrs will work in init

1.015 2016-02-23T14:33:00Z
 - remove Build.PL
 - Add META.json to the built dist
 - Avoid using YAML::XS 0.61 where possible
 - fix minimum test prereqs
 - update travis config to test core, hide modules

1.014 2015-11-02T21:22:53Z
 - allow empty hashref in service args
 - add exception class for config errors
 - upgrade perl in travis config
 - remove ModuleBuild to prevent toolchain confusion
 - Implement -a, allow -h to work without file
 - Add beam-wire script with checks for all but method chain & serial

1.013 2015-03-30T04:07:22Z
 - deprecate $method in dependency to get a value
 - add $call to get a dependency by calling a method
 - test that extended configs remain unchanged
 - add current service name to args and ref resolver
 - fix docs for event listeners
 - more deprecation test to a directory
 - compose roles into service objects
 - fix categorization of some tests
 - write all tests in terms of new example modules
 - remove inline packages from test scripts
 - categorize tests with directories

1.012 2015-03-09T03:47:33Z
 - fix some more inline package lookups
 - add deprecation warn for $method in event handlers
 - add test for anonymous event handler args