@@ -129,6 +129,7 @@ Beam::Emitter = 0
 Path::Tiny = 0.055 ; First version with fixed tempfile/tempdir
 Config::Any = 0.23
 YAML = 0
+Beam::Service = 0
 
 [Prereqs / Recommends]
 JSON = 0
