@@ -1,0 +1,9 @@
+package
+    My::Service;
+
+use Moo;
+with 'Beam::Service';
+
+has foo => ( is => 'ro' );
+
+1;
